# financial-rag-agent

./: .gitignore  app.py  pyproject.toml  requirements.txt
src/: generation.py  ingestion.py  rag_pipeline.py  retrieval.py
